---
source: crates/smart-config-commands/tests/integration/main.rs
assertion_line: 51
expression: buffer
---
test.funding
test.funds [deprecated alias]
  Config: FundingConfig
  Validations:
  - `address` should be non-zero for non-zero `balance`

test.funding.address
test.funds.address [deprecated alias]
  Type: string [Rust: Address]; hex string with optional 0x prefix
  Default: "0x0000000000000000000000000000000000000000"
  Ethereum-like address to fund.

test.funding.balance
test.funds.balance [deprecated alias]
  Type: string [Rust: U256]; 0x-prefixed hex number
  Default: "0x0"
  Initial balance for the address.

test.funding.min_fee
test.funds.min_fee [deprecated alias]
  Type: string | object [Rust: EtherAmount]; amount with unit, or object with single unit key
  Name suffixes: ether value units, e.g. _gwei or _in_ether
  Default: "0 ether"
  Minimum fee.

test.funding.aux_balances
test.funds.aux_balances [deprecated alias]
  Type: string | object [Rust: HashMap]; map
    Map keys: string [Rust: primitive_types::H160]; hex string with optional 0x prefix
    Map values: string | object [Rust: smart_config::types::EtherAmount]; amount with unit, or object with single unit key
    Entries separator: regex: r"\s*[,\n]\s*"
    Key–value separator: regex: r"\s*=\s*"
  Default: {}

test.funding.api_key
test.funds.api_key [deprecated alias]
  Type: secret string [Rust: Option]
  Default: null
  Example: "correct horse battery staple"
  Secret string value.

test.funding.secret_key
test.funds.secret_key [deprecated alias]
  Type: secret string [Rust: Option]
  Default: null
  Example: "0x0000000000000000000000000000000000000000000000000000000000000000"
  Secret key.
